BSA-84 fix: increase `.action-bar`'s `z-index` in order to render sub-items such as accessibility tools over `.qti-content`, having a `z-index` value of `1`

--- a/views/scss/inc/_action-bars.scss
+++ b/views/scss/inc/_action-bars.scss
@@ -5,6 +5,7 @@
     padding: 3px;
     overflow: hidden;
     color: whiten($info, .9);
+    z-index: 10;
 
     li {
         float: left;
